chore: Add Tailwind CSS configuration and update dependencies

--- a/src/theme/globals.css
+++ b/src/theme/globals.css
@@ -1,4 +1,7 @@
 @import "@openfonts/rubik_all/index.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
   -webkit-box-sizing: border-box;
